Bug 693637 - Some of user options are not working in windows printer driver when option QueryUser set to 3.
Summary: Some of user options are not working in windows printer driver when option Qu...
Status: RESOLVED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: Printer Driver (show other bugs)
Version: master
Hardware: PC Windows 8
: P4 normal
Assignee: Default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-02-13 11:38 UTC by Stanislav Kuzmin
Modified: 2023-05-11 13:03 UTC (History)
1 user (show)

See Also:
Customer:
Word Size: ---


Attachments
options.patch (842 bytes, patch)
2013-02-13 11:38 UTC, Stanislav Kuzmin
Details | Diff
setup.ps (608 bytes, application/postscript)
2013-02-13 11:39 UTC, Stanislav Kuzmin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Stanislav Kuzmin 2013-02-13 11:38:27 UTC
When /QueryUser set to 3 (select default system printer) following user options are not working: /Copies, /Orientation, /Color and /Paper.

Command line:  gswin32c -dNOPAUSE -dBATCH setup.ps test.pdf

Contents of setup.ps file and my solution patch of gdevwpr2.c see in attachments.
Comment 1 Stanislav Kuzmin 2013-02-13 11:38:51 UTC
Created attachment 9281 [details]
options.patch
Comment 2 Stanislav Kuzmin 2013-02-13 11:39:26 UTC
Created attachment 9282 [details]
setup.ps
Comment 3 Ken Sharp 2023-05-10 13:27:54 UTC
Patch committed here 219e16aabc84905b17ae7dbaf6718a62d100e6a4